# faker-galactic

./: .cspell.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TASK5_TESTING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  coverage-badge.yml  publish-release.yml
scripts/: release.py
src/faker_galactic/: __init__.py  provider.py  release_utils.py
src/faker_galactic/data/: __init__.py  constants.py  domains.py  startrek.py
tests/: test_canonical_characters.py  test_provider.py  test_release.py  test_release_utils.py  test_universes.py
