[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faker-galactic"
version = "1.0.0"
description = "Science fiction themed Faker provider for multiple universes including Star Trek, Star Wars, Battlestar Galactica, and more"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jason Leibowitz", email = "jason@leibowitz.me" }]
requires-python = ">=3.9"
keywords = [
    "faker",
    "fake-data",
    "sci-fi",
    "science-fiction",
    "star-trek",
    "star-wars",
    "testing",
    "mock-data",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
dependencies = ["faker>=20.0.0"]

[project.urls]
Homepage = "https://github.com/yourusername/faker-galactic"      # UPDATE
Repository = "https://github.com/yourusername/faker-galactic"    # UPDATE
Issues = "https://github.com/yourusername/faker-galactic/issues" # UPDATE

[tool.hatch.build.targets.wheel]
packages = ["src/faker_galactic"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "twine>=6.2.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "pre-commit>=3.6.0",
    "questionary>=2.0.0",
    "tomlkit>=0.12.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "I",     # isort
    "C90",   # mccabe complexity
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__ (re-exports)
"tests/*" = ["F401"]      # More lenient in tests

[tool.ruff.lint.isort]
known-first-party = ["faker_galactic"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false  # More lenient in tests

[[tool.mypy.overrides]]
module = "faker.*"
ignore_missing_imports = true  # Faker has incomplete type stubs

[[tool.mypy.overrides]]
module = "questionary"
ignore_missing_imports = true  # questionary has incomplete type stubs

[[tool.mypy.overrides]]
module = "tomlkit"
ignore_missing_imports = true  # tomlkit has incomplete type stubs
